# astro-calendar

./: .gitignore  LICENSE  README.md  astro-calendar.cabal  cabal.project.local  default.nix  flake.nix
.github/workflows/: main.yml
app/: Finder.hs  Main.hs
render/: chart.py  render_chart.py  timeline.py
src/: Main.hs
src/AstroCalendar/: Angle.hs  Aspect.hs  Chart.hs  Commonalities.hs  Delineation.hs  Eclipse.hs  Ephemeris.hs  Event.hs  ExactTime.hs  ICalendar.hs  Interpretation.hs  Symbol.hs  Types.hs
test/: Tests.hs
test_data/: goethe_chart.json
