cabal-version: 3.0
name:          astro-calendar
version:       1.0.0
license:       AGPL-3.0-or-later
license-file:  LICENSE
author:        Kierán Meinhardt
maintainer:    kmein@posteo.de
category:      Astrology
build-type:    Simple

common warnings
  ghc-options: -Wall

library astro-calendar-lib
  import:             warnings
  hs-source-dirs:     src
  ghc-options:        -O2 -threaded -with-rtsopts=-N -Werror
  exposed-modules:
    AstroCalendar.Angle
    AstroCalendar.Aspect
    AstroCalendar.Chart
    AstroCalendar.Commonalities
    AstroCalendar.Delineation
    AstroCalendar.Eclipse
    AstroCalendar.Ephemeris
    AstroCalendar.Event
    AstroCalendar.ExactTime
    AstroCalendar.ICalendar
    AstroCalendar.Interpretation
    AstroCalendar.Types

  build-depends:
    , aeson            >=2     && <3
    , async
    , base             >=4     && <5
    , bytestring       >=0.11  && <1
    , cassava          >=0.5   && <1
    , containers       >=0.6   && <1
    , data-default     >=0.7   && <1
    , directory        >=1.3   && <2
    , http-client      >=0.7   && <1
    , http-client-tls  >=0.3   && <1
    , iCalendar        >=0.4   && <1
    , parallel
    , swiss-ephemeris  >=1.4   && <2
    , text             >=2     && <3
    , time             >=1.12  && <2
    , tz               >=0.1   && <1
    , uuid             >=1.3.0 && <2
    , vector           >=0.12  && <1

  default-language:   Haskell2010
  default-extensions:
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    NamedFieldPuns
    TupleSections

executable astro-calendar-cli
  import:             warnings
  hs-source-dirs:     app
  ghc-options:        -O2 -threaded -with-rtsopts=-N -Werror
  main-is:            Main.hs
  build-depends:
    , aeson                 >=2    && <3
    , astro-calendar-lib
    , base                  >=4    && <5
    , bytestring            >=0.11 && <1
    , data-default          >=0.7  && <1
    , iCalendar             >=0.4  && <1
    , optparse-applicative  >=0.18 && <1
    , safe
    , swiss-ephemeris       >=1.4  && <2
    , text                  >=2    && <3
    , time                  >=1.12 && <2
    , tz                    >=0.1  && <1

  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    NamedFieldPuns

-- test-suite astro-calendar-tests
--   import:             warnings
--   hs-source-dirs:     test
--   ghc-options:        -O2 -threaded -with-rtsopts=-N -Werror
--   type:               exitcode-stdio-1.0
--   main-is:            Tests.hs
--   build-depends:
--     , aeson
--     , astro-calendar-lib
--     , base
--     , containers
--     , swiss-ephemeris
--     , tasty
--     , tasty-hunit
--     , time
--
--   default-language:   Haskell2010
--   default-extensions:
--     ImportQualifiedPost
--     NamedFieldPuns
